--- a/src/SolutionExample/Sagas/OrderSaga/OrderSaga.csproj
+++ b/src/SolutionExample/Sagas/OrderSaga/OrderSaga.csproj
@@ -4,13 +4,11 @@
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.14" />
-    <PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.0-beta5" />
-    <PackageReference Include="WindowsAzure.Storage" Version="9.3.0" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="3.0.0-beta8" />
+    <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.19" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\AFBusCore\AFBusCore.csproj" />
-
     <ProjectReference Include="..\..\Services\PaymentService.Messages\PaymentService.Messages.csproj" />
     <ProjectReference Include="..\..\Services\ShippingService.Messages\ShippingService.Messages.csproj" />
     <ProjectReference Include="..\OrderSagaMessages\OrderSaga.Messages.csproj" />
