--- a/src/AFBusCore/AFBusCore.csproj
+++ b/src/AFBusCore/AFBusCore.csproj
@@ -7,10 +7,10 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageTags>Azure-Functions Bus</PackageTags>
     <PackageProjectUrl>https://github.com/organization-quintasenergy/Azure-Functions-Bus</PackageProjectUrl>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <AssemblyVersion>1.2.0.0</AssemblyVersion>
 
-    <FileVersion>1.0.0.0</FileVersion>
-    <Version>1.1.3</Version>
+    <FileVersion>1.2.0.0</FileVersion>
+    <Version>1.2.0</Version>
 
     <PackageId>AFBusCore</PackageId>
     <RootNamespace>AFBus</RootNamespace>
@@ -20,8 +20,9 @@
     <PackageReference Include="Microsoft.Azure.EventHubs" Version="2.1.0" />
     <PackageReference Include="Microsoft.Azure.EventHubs.Processor" Version="2.1.0" />
     <PackageReference Include="Microsoft.Azure.ServiceBus" Version="3.1.0" />
-    <PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.0-beta5" />
-    <PackageReference Include="WindowsAzure.Storage" Version="9.3.1" />
+    <PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.0" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.3.2" />
   </ItemGroup>
 
   <ItemGroup>
