--- a/.gitignore
+++ b/.gitignore
@@ -38,9 +38,9 @@
 /src/SolutionExample/UI/UIExample/bin/Debug
 /src/SolutionExample/UI/UIExample/obj
 /src/SolutionExample/UI/UIExample/node_modules
-/src/AFBusCore.Tests/bin/Debug/netcoreapp2.0
+/src/AFBusCore.Tests/bin/
 /src/AFBusCore/bin/Debug/netstandard2.0
-/src/AFBusCore/obj
+/src/AFBusCore/obj/
 /src/AFBusCore.Tests/obj
 /src/AFBusCore/bin/Debug
 /src/AFBusCore.Tests/gitignoreappsettings.json
